k8s/mssql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - image: mcr.microsoft.com/azure-sql-edge
        name: mssql
        ports:
          - containerPort: 1433
        volumeMounts:
        - mountPath: /var/opt/mssql/data
          name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim
