k8s/mssql-clusterip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  ports:
  - name: mssql
    port: 1433
    protocol: TCP
    targetPort: 1433
  selector:
    app: mssql
  type: ClusterIP
