k8s/mssql-loadbalancer-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  ports:
  - name: mssql
    port: 1433
    protocol: TCP
    targetPort: 1433
  selector:
    app: mssql
  type: LoadBalancer
