k8s/platform-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformservice-svc
spec:
  type: NodePort
  ports:
  - name: platformservice
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: platform
