k8s/platforms-clusterip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  ports:
  - name: platformservice
    port: 80
    protocol: TCP
    targetPort: 80
  - name: platformgrpc
    protocol: TCP
    port: 666
    targetPort: 666

  selector:
    app: platform
  type: ClusterIP
